--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ de.fhdo.ddmm.ocl/
 out/
 de.fhdo.lemma*/build/
 code generators/de.fhdo.lemma*/build/
+de.fhdo.lemma.live_validation/*/build/
 .idea/
 set_java_home.sh
 code generators/de.fhdo.lemma.model_processing.code_generation.java_base/linecnt_helper.py
